<resources>
    <string name="app_name">IAS UCC</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>

   <!-- TextView Only-->

    <string name="text_name">Name</string>
    <string name="text_phone">Phone</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_confirmpassword">Confirm Password</string>
    <string name="text_language">Language</string>
    <string name="daily_updates">Daily Updates</string>
    <string name="others">Value Additions</string>
    <string name="daily_questions">Daily Questions</string>
    <string name="news">News</string>
    <string name="forum">Student Forum</string>
    <string name="test_series">Test Series</string>
    <string name="notifications">Notifications</string>
    <string name="guidlines">Guidance</string>
    <string name="student_forum">Student Forum</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="about_ucc_text">"            "We aim to be an institution of excellence in promoting the knowledge quotient and strive to produce the future intellectual leaders. Our motto is to provide the best teaching to the students. We have a huge list of impressive success of students. We promise a better future for your children in higher education and knowledge. We make your life better and brighter. Contact us for further details.</string>
    <string name="about_ucc">About Ucc</string>
    <string name="contact_ucc">Contact Us</string>
    <string name="questions">Questions</string>
    <string name="science_and_tech">Science And Technology</string>
    <string name="settings">Settings</string>
    <string name="results">Result</string>
    <string name="liked">Liked</string>
    <string name="like">Like</string>
    <string name="registrer">Register</string>
    <string name="comment">Comment</string>
    <string name="create_forum">Create Forum</string>
    <string name="reviewsno">Reviews</string>
    <string name="my_test_series">My Test Series</string>
    <string name="online_test_series">Online Test Series</string>
    <string name="download_sample">Download Sample</string>
    <string name="buy_now">Buy Now</string>
    <string name="info">info</string>
    <string name="series_content">series content</string>
    <string name="reviews_tab">reviews</string>
    <string name="new_questions">New Questions</string>
    <string name="no_ques_avail">No Questions Available</string>
    <string name="submit">SUBMIT</string>
    <string name="ok">Ok</string>
    <string name="sub_categories">Sub Categories</string>
    <string name="home_">HOME</string>
    <string name="call">Phone :</string>
    <string name="mail_us">Email id :</string>
    <string name="visit">Address :</string>
    <string name="user_name">Daya Shankar wfugj gnerjfn jiwernwhj nhj f</string>
    <string name="user_date">4 Hours Ago</string>
    <string name="user_like">3 Like</string>
    <string name="user_reply">6 Reply</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="clickagaintoback"> Press again to exit application</string>
    <string name="bought_testpaper">You bought Test Paper</string>
    <string name="show_bookname">IBPS Clerk Prelims Practice Papers 2015</string>
    <string name="by_ucc">BY Ucc</string>
    <string name="reviews">Reviews</string>
    <string name="write_comment_here">Writr your comment here</string>
    <string name="review_added">review added</string>
    <string name="already_reviewd">You Have already reviewedc</string>
    <string name="SciQuiz3">SciQuiz3</string>
    <string name="pre">Pre</string>
    <string name="nxt">Nxt</string>
    <string name="explanation">Expaination :</string>
    <string name="total_candidates">Total Candidates</string>
    <string name="best_score">Best Score</string>
    <string name="your_rank">Your Rank</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="all">ALL</string>
    <string name="favourites">FAVOURITES</string>
    <string name="haveaccount_signin">Already have an Account ?
</string>
    <string name="search_notification">Search Notification by Title</string>
    <string name="search_guidance">Search Guidance by Title</string>
    <string name="search_news">search News by Title</string>


    <string name="user_forum_topic">What is base year regarding to GDP.
Why we need to change it and...</string>
    <string name="descriptin">description</string>
    <string name="how_it_works">How it works? </string>
    <string name="forget_password">Forgot password ?</string>
    <string name="new_in_ucc">New User ?</string>
    <string name="button_login">Create Account</string>
    <string name="location">Location</string>
    <string name="news_text">India launches Imprint-India project</string>
    <string name="news_desc">Impacting Reaseach </string>
    <string name="free">Free</string>
    <string name="no_release"> no new Release</string>

    <string name="report_abused">Report Abused</string>
    <string name="follow_the_question">Follow The Question</string>
    <string name="news_description">News Description</string>
    <string name="notification_description">Notification Description</string>
    <string name="guidlines_description">Guidance Description</string>



    <!-- Only EditText Hint-->

    <string name="edittext_name">Enter your name</string>
    <string name="edittext_phone">Enter your phone number</string>
    <string name="edittext_email">Enter your email id</string>
    <string name="edittext_password">Enter your password</string>
    <string name="edittext_confirmpassword">confirm your password</string>
    <string name="write_comment">Create your Forum here</string>
    <string name="address">No. 2922/20, Chord Road, Near Attiguppe Bus Stop, R.P.C. Layout, Next to Syndicate Bank, Vijayanagar, Hampi Nagar, RPC Layout, Attiguppe, Bengaluru, Karnataka 560040</string>
    <string name="edittext_post">Write a comment</string>
    <string name="edittext_your_comment">Enter your comment</string>

  <!--  Button Only-->

    <string name="button_register">Create Account</string>
    <string name="send">Send</string>
    <string name="button_prev">Prev</string>
    <string name="button_next">Next</string>
    <string name="button_signin">Sign In</string>

<!--Array-->

    <string-array name="series_item_description">
        <item>@string/info</item>
        <item>@string/series_content</item>
        <item>@string/reviews_tab</item>
    </string-array>

    <!--Menu-->

    <string name="menu_home">Home</string>
    <string name="menu_about_ucc">About UCC</string>
    <string name="menu_test_series">My Test Series</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_share">Share</string>
    <string name="menu_rating">Rate this app"</string>
    <string name="menu_communicate">Communicate</string>

    <!--Toast Message-->

    <string name="toast_check_connection">Please Check your Internet Connection</string>




    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
