<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            >

            <TextView
                android:id="@+id/grid_text_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/news_text"
                android:textSize="@dimen/news_notifi_ques_title"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_date"
                android:textSize="@dimen/news_notifi_ques_date"
                android:textColor="#BCBEC0"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/news_desc"
                android:textSize="@dimen/news_notifi_ques_text"
                android:maxLines="3"
                android:textColor="#6D6E70"
                android:autoLink="all"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>