<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/logo"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="IAS UCC"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="#262261"
                    android:gravity="center|top"/>
            </LinearLayout>

            <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/email_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:hint="@string/edittext_email"
                android:textSize="14dp"
                android:padding="10dp"
                android:textColorHint="#918F90"
                android:inputType="textEmailAddress"
                android:background="@drawable/loginsignup"/>
        </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/loginsignup" >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColorHint="#918F90"
                    android:hint="@string/edittext_password"
                    android:textSize="14dp"
                    android:padding="10dp"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:layout_weight=".3"/>
                <TextView
                    android:id="@+id/showPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="SHOW"
                    android:gravity="center"
                    android:layout_weight=".7"/>
            </LinearLayout>
        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="right">


         <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/forget_password"
            android:id="@+id/forgetpassword"
            android:gravity="center"
            android:textStyle="normal"
            android:textSize="16dp"/>
    </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_signin"
                android:id="@+id/buttonSave"
                android:textColor="@color/white"
                android:background="@drawable/signin"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:layout_marginRight="10dp">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_in_ucc"
                android:textSize="17dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_login"
                android:id="@+id/newucc"
                android:background="@drawable/createaccount"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"/>
        </LinearLayout>


        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
